--- a/res/layout/button_department.xml
+++ b/res/layout/button_department.xml
@@ -3,5 +3,6 @@
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:layout_marginLeft="-10dp"
-    android:background="@drawable/button_dept_normal"
+    android:background="@null"
+    android:drawableRight="@drawable/button_dept_normal"
     android:textColor="@android:color/black" />
