--- a/res/drawable/tab_office_list_bg.xml
+++ b/res/drawable/tab_office_list_bg.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:drawable="@drawable/office_ed" android:state_selected="true"/>
-    <item android:drawable="@drawable/office"/>
+    <item android:drawable="@drawable/tab_office_hover" android:state_selected="true"/>
+    <item android:drawable="@drawable/tab_office_normal"/>
 
 </selector>
