--- a/res/layout/activity_splash.xml
+++ b/res/layout/activity_splash.xml
@@ -2,24 +2,16 @@
     android:id="@+id/splash_root"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@drawable/splash" >
+    android:background="#563d82" >
 
     <ImageView
         android:id="@+id/iv_splash_logo"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:src="@drawable/splash_logo" />
+        android:scaleType="fitCenter"
+        android:src="@drawable/ic_wel_splash" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/iv_splash_logo"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dip"
-        android:text="即时通讯云领导者"
-        android:textColor="#fff"
-        android:textSize="30sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -27,6 +19,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="50dip"
         android:gravity="center_horizontal"
+        android:visibility="gone"
         android:orientation="horizontal" >
 
         <TextView
