--- a/res/layout/contact_list.xml
+++ b/res/layout/contact_list.xml
@@ -3,23 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-
-    <RelativeLayout
-        android:id="@+id/title_container"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/height_top_bar"
-        android:background="@drawable/title_bar"
-        android:visibility="gone" >
-
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:textColor="#ffffff"
-            android:textSize="20sp" />
-    </RelativeLayout>
-
+    
+    <include layout="@layout/top_bar_view"/>
     <ListView
         android:id="@+id/list"
         android:layout_width="match_parent"
