--- a/res/layout/enterprise.xml
+++ b/res/layout/enterprise.xml
@@ -5,21 +5,7 @@
     android:background="#f2f0eb"
     android:gravity="center_horizontal"
     android:orientation="vertical" >
-
-    <RelativeLayout
-        android:id="@+id/title"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/height_top_bar"
-        android:background="@color/common_top_bar_white" >
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="@string/enterprise"
-            android:textColor="#000000"
-            android:textSize="18sp" />
-    </RelativeLayout>
+    <include layout="@layout/top_bar_view"/>
 
     <FrameLayout
         android:id="@+id/frame_contanier"
@@ -72,8 +58,9 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:scaleType="center"
-                android:src="@drawable/anouncement" />
+               android:scaleType="fitCenter"
+                android:layout_margin="5dp"
+                android:src="@drawable/icon_announcement" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -94,8 +81,9 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:scaleType="center"
-                android:src="@drawable/btn_app_checkin" />
+                android:scaleType="fitCenter"
+                android:layout_margin="5dp"
+                android:src="@drawable/icon_position" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -116,8 +104,9 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:scaleType="center"
-                android:src="@drawable/btn_app_approval" />
+                android:scaleType="fitCenter"
+                android:layout_margin="5dp"
+                android:src="@drawable/icon_approval" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -138,8 +127,9 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:scaleType="center"
-                android:src="@drawable/btn_app_netdisk" />
+                android:scaleType="fitCenter"
+                android:layout_margin="5dp"
+                android:src="@drawable/icon_cloud" />
 
             <TextView
                 android:layout_width="wrap_content"
