--- a/res/layout/horizontal_scroll_bar.xml
+++ b/res/layout/horizontal_scroll_bar.xml
@@ -2,7 +2,7 @@
 <com.easemob.chatuidemo.activity.contact.widget.AutoHorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="40dp"
-    android:background="#E6E6E6"
+    android:background="#ffffff"
     android:scrollbars="none" >
 
     <LinearLayout
