--- a/res/layout/row_department.xml
+++ b/res/layout/row_department.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="60dp"
     android:background="@drawable/row_dept_bg"
@@ -7,7 +7,11 @@
 
     <ImageView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_centerVertical="true"
+        android:layout_centerInParent="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="10dp"
         android:duplicateParentState="true"
         android:src="@drawable/bakchat_forward" />
 
@@ -15,8 +19,10 @@
         android:id="@+id/dept"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
         android:padding="8dp"
         android:textColor="#323232"
+        android:layout_marginLeft="10dp"
         android:textSize="17sp" />
 
-</LinearLayout>
+</RelativeLayout>
