--- a/res/layout/activity_new_group.xml
+++ b/res/layout/activity_new_group.xml
@@ -31,7 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="@string/The_new_group_chat"
-            android:textColor="#ffffff"
+            android:textColor="#000"
             android:textSize="20sp" />
 
         <Button
@@ -42,7 +42,7 @@
             android:background="@drawable/common_tab_bg"
             android:onClick="save"
             android:text="@string/button_save"
-            android:textColor="#fff"
+            android:textColor="#000"
             android:textSize="18sp" />
     </RelativeLayout>
 
