--- a/res/layout/fragment_groups.xml
+++ b/res/layout/fragment_groups.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="@string/group_chat"
-            android:textColor="@color/bottom_text_color_normal"
+            android:textColor="#000"
             android:textSize="18sp" />
         
     </RelativeLayout>
