--- a/res/layout/top_bar_view.xml
+++ b/res/layout/top_bar_view.xml
@@ -3,7 +3,8 @@
     android:id="@+id/rl_top_bar_view"
     android:layout_width="match_parent"
     android:layout_height="@dimen/height_top_bar"
-    android:background="@color/common_top_bar_white" >
+    >
+    <!-- android:background="@color/common_top_bar_white"  -->
 
     <ImageButton
         android:id="@+id/leftBtn"
@@ -36,5 +37,17 @@
         android:padding="5dp"
         android:src="@drawable/icon_chat_setting"
         android:visibility="gone" />
+    
+    <Button 
+        android:id="@+id/btn_more"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@null"
+        android:text="more"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="10dip"
+        android:padding="5dip"
+        android:textColor="#fff"
+        android:visibility="gone"/>
 
 </RelativeLayout>
