--- a/res/layout/activity_personal_info.xml
+++ b/res/layout/activity_personal_info.xml
@@ -13,7 +13,39 @@
         android:clipToPadding="true"
         android:fitsSystemWindows="true" >
 
-        <include layout="@layout/top_bar_view" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dip" >
+
+            <ImageButton
+                android:id="@+id/leftBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:background="@null"
+                android:padding="5dp"
+                android:src="@drawable/icon_btn_back_black"
+                android:visibility="visible" />
+
+            <TextView
+                android:id="@+id/txtTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:textColor="@android:color/black"
+                android:textSize="16sp" />
+
+            <Button
+                android:id="@+id/btn_more"
+                android:layout_width="wrap_content"
+                android:layout_height="30dip"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="10dip"
+                android:background="@null"
+                android:text="more"
+                android:textColor="#fff"
+                android:visibility="visible" />
+        </RelativeLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -24,8 +56,8 @@
 
             <com.easemob.qixin.widget.CircleImageView
                 android:id="@+id/iv_avatar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="60dip"
+                android:layout_height="60dip"
                 android:src="@drawable/default_avatar"
                 circle:border_color="#fff"
                 circle:border_width="0.1dp" />
@@ -134,8 +166,8 @@
             android:layout_width="match_parent"
             android:layout_height="50dip"
             android:layout_alignParentBottom="true"
-            android:gravity="center"
-            android:background="#fff" >
+            android:background="#fff"
+            android:gravity="center" >
 
             <ImageView
                 android:layout_width="wrap_content"
